--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
       <div class="livro">
         <img src="img/Logo.png" alt="Livro 1" height="300" width="300" />
         <h2>Título do Livro 1</h2>
-        <p>Autor: Fulano de Tal</p>
+        <p>Autor: </p>
         <button>Ver mais</button>
       </div>
 
       <div class="livro">
         <img src="img/Logo.png" alt="Livro 2" />
         <h2>Título do Livro 2</h2>
-        <p>Autor: Ciclano da Silva</p>
+        <p>Autor: </p>
         <button>Ver mais</button>
       </div>
 
       <div class="livro">
         <img src="img/Logo.png" alt="Livro 3" />
         <h2>Título do Livro 3</h2>
-        <p>Autor: Beltrano Souza</p>
+        <p>Autor: </p>
         <button>Ver mais</button>
       </div>
 
