--- a/index.html
+++ b/index.html
@@ -1,72 +1,127 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Livraria Central</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css" />
+
 </head>
+
 <body>
 
-  <header>
-    <h1>Livraria Online</h1>
-    <img src="img/Logo.png" alt="Livro 1" height="300" width="300" />
-    <nav>
-      <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Livros</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
+  <div class="container-fluid">
+    <div class="navbar-container">
+      <nav>
+        <a href="a">
+          <img src="img/Logo.png" alt="Livraria Central" class="logo">
+        </a>
+        <ul class="navbar-i">
+          <li>
+            <a href="a">Home</a>
+          </li>
+          <li>
+            <a href="a">Categorias</a>
+          </li>
+          <li>
+            <a href="a" class="btn-entrar">Entrar</a>
+          </li>
 
-    <div class="barra-pesquisa">
-      <input type="text" placeholder="Pesquisar livros..." />
-      <button>🔍</button>
+        </ul>
+      </nav>
     </div>
-  </header>
-
-  <main>
-    <aside class="categorias">
-      <h3>Categorias</h3>
-      <ul>
-        <li><a href="#">Romance</a></li>
-        <li><a href="#">Ficção</a></li>
-        <li><a href="#">Aventura</a></li>
-        <li><a href="#">Biografia</a></li>
-        <li><a href="#">Terror</a></li>
-        <li><a href="#">Fantasia</a></li>
-      </ul>
-    </aside>
-
-    <section class="livros">
-      <div class="livro">
-        <img src="img/Logo.png" alt="Livro 1" height="300" width="300" />
-        <h2>Título do Livro 1</h2>
-        <p>Autor: </p>
-        <button>Ver mais</button>
+    <main>
+      <div class="banner">
+        <h1>Livraria Central</h1>
+        <p>Explore novos mundos</p>
       </div>
 
-      <div class="livro">
-        <img src="img/Logo.png" alt="Livro 2" />
-        <h2>Título do Livro 2</h2>
-        <p>Autor: </p>
-        <button>Ver mais</button>
-      </div>
+      <!-- Livros -->
 
-      <div class="livro">
-        <img src="img/Logo.png" alt="Livro 3" />
-        <h2>Título do Livro 3</h2>
-        <p>Autor: </p>
-        <button>Ver mais</button>
-      </div>
+      <section class="books-container">
+        <ul>
+          <div class="card" style="width: 18rem;">
+            <img src="img/Harry01english.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Harry Potter e a Pedra Filosofal</h5>
+              <p class="card-text">J.K. Rowling (1997).</p>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="img/O Hobbit.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">O Hobbit</h5>
+              <p class="card-text">J.R.R. Tolkien (1937).</p>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="img/O Senhor dos Anéis A Sociedade do Anel.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">O Senhor dos Anéis: A Sociedade do Anel</h5>
+              <p class="card-text">J.R.R. Tolkien (1954).</p>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="img/DOM CASMURRO - 1899.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Dom Casmurro</h5>
+              <p class="card-text">Machado de Assis (1899).</p>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="img/O grande Gatsby.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">O Grande Gatsby</h5>
+              <p class="card-text">F. Scott Fitzgerald (1925).</p>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="img/1984.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">1984</h5>
+              <p class="card-text">George Orwell (1949).</p>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
+            </div>
+          </div>
+        </ul>
+      </section>
 
-      <!-- Adicione mais livros conforme quiser -->
-    </section>
-  </main>
+      <section class="form-contato">
+        <h2>Fale conosco</h2>
+        <form action="contato" method="POST">
+          <div class="mb-3">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="mensagem">Mensagem:</label>
+            <textarea id="mensagem" name="mensagem" rows="4" required class="form-control"></textarea>
+          </div>
+          <button type="submit" class="btn btn-warning">Enviar</button>
+        </form>
+      </section>
 
-  <footer>
-    <p>&copy; 2025 Livraria Central. Todos os direitos reservados.</p>
-  </footer>
+    </main>
+  </div>
   
+ <footer>
+    &copy; 2025 Livraria Central. Todos os direitos reservados.
+  </footer>
+
 </body>
+
 </html>
