--- a/contato.htm
+++ b/contato.htm
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css" />
 
-  <body>
+<body>
 
   <div class="container-fluid">
     <div class="navbar-container">
@@ -34,25 +34,36 @@
       </nav>
     </div>
 
-  <main>
-    <section class="form-contato" id="about">
-      <h2>Fale conosco</h2>
-      <form action="contato" method="POST">
-        <div class="mb-3">
-          <label for="nome">Nome:</label>
-          <input type="text" id="nome" name="nome" required class="form-control">
-        </div>
-        <div class="mb-3">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required class="form-control">
-        </div>
-        <div class="mb-3">
-          <label for="mensagem">Mensagem:</label>
-          <textarea id="mensagem" name="mensagem" rows="4" required class="form-control"></textarea>
-        </div>
-        <button type="submit" class="btn btn-warning">Enviar</button>
-      </form>
-    </section>
+    <main>
+      <section class="form-contato" id="about">
+        <h2>Fale conosco</h2>
+        <form action="contato" id="form-contato" method="POST">
+          <div class="mb-3">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="mensagem">Mensagem:</label>
+            <textarea id="mensagem" name="mensagem" rows="4" required class="form-control"></textarea>
+          </div>
+          <button type="submit" class="btn btn-warning">Enviar</button>
+        </form>
+      </section>
 
-  </main>
+      <script>
+        document.getElementById("form-contato").addEventListener("submit", function (e) {
+          e.preventDefault(); // impede envio real
+
+          const nomeDigitado = document.getElementById("nome").value;
+
+          alert(`Obrigado, Sua ficha foi enviada com sucesso.`);
+        });
+      </script>
+
   </div>
+  </main>
+</body>
