--- a/contato.htm
+++ b/contato.htm
@@ -5,9 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Livraria Central</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css" />
 
@@ -20,8 +17,11 @@
           <img src="img/Logo.png" alt="Livraria Central" class="logo">
         </a>
         <ul class="navbar-i">
-          <li>
+             <li>
             <a href="/Livraria/index.html">Home</a>
+          </li>
+         <li>
+            <a href="/Livraria/Catalogo.html" class="btn-catlg">Catálogo</a>
           </li>
           <li>
             <a href="/Livraria/contato.htm" class="contato">Contato</a>
