--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Livraria Central</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css" />
 
@@ -23,7 +21,10 @@
         </a>
         <ul class="navbar-i">
           <li>
-            <a href="#home">Home</a>
+            <a href="/Livraria/index.html">Home</a>
+          </li>
+         <li>
+            <a href="/Livraria/Catalogo.html" class="btn-catlg">Catálogo</a>
           </li>
           <li>
             <a href="/Livraria/contato.htm" class="contato">Contato</a>
@@ -31,6 +32,7 @@
           <li>
             <a href="/Livraria/login/index.htm" class="btn-entrar">Entrar</a>
           </li>
+          
 
         </ul>
       </nav>
@@ -45,6 +47,12 @@
     
       <!-- Livros -->
 
+        <section class="vnd-container">
+         <div class="Vendas">
+        <h1>Mais Vendidos</h1>
+      </div>
+      </section>
+
       <section class="books-container">
         <ul>
           <div class="card" style="width: 18rem;">
@@ -52,7 +60,7 @@
             <div class="card-body">
               <h5 class="card-title">Harry Potter e a Pedra Filosofal</h5>
               <p class="card-text">J.K. Rowling (1997).</p>
-              <a href="compra.html?livro=harry-potter" class="btn btn-primary">R$ 30.00</a>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
 
             </div>
           </div>
@@ -61,7 +69,7 @@
             <div class="card-body">
               <h5 class="card-title">O Hobbit</h5>
               <p class="card-text">J.R.R. Tolkien (1937).</p>
-              <a href="compra.html?livro=o-hobbit" class="btn btn-primary">R$ 30.00</a>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
 
             </div>
           </div>
@@ -70,7 +78,7 @@
             <div class="card-body">
               <h5 class="card-title">O Senhor dos Anéis: A Sociedade do Anel</h5>
               <p class="card-text">J.R.R. Tolkien (1954).</p>
-              <a href="compra.html?livro=sociedade-do-anel" class="btn btn-primary">R$ 30.00</a>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -78,7 +86,7 @@
             <div class="card-body">
               <h5 class="card-title">Dom Casmurro</h5>
               <p class="card-text">Machado de Assis (1899).</p>
-              <a href="compra.html?livro=dom-casmurro" class="btn btn-primary">R$ 30.00</a>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -86,7 +94,7 @@
             <div class="card-body">
               <h5 class="card-title">O Grande Gatsby</h5>
               <p class="card-text">F. Scott Fitzgerald (1925).</p>
-              <a href="compra.html?livro=gatsby" class="btn btn-primary">R$ 30.00</a>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -94,7 +102,7 @@
             <div class="card-body">
               <h5 class="card-title">1984</h5>
               <p class="card-text">George Orwell (1949).</p>
-              <a href="compra.html?livro=1984" class="btn btn-primary">R$ 30.00</a>
+              <a href="#" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
         </ul>
@@ -102,9 +110,26 @@
     </main>
   </div>
   
- <footer>
-    &copy; 2025 Livraria Central. Todos os direitos reservados.
-  </footer>
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-info">
+      <h4>Livraria Central</h4>
+      <p>Desde 2025 conectando leitores aos melhores mundos literários.</p>
+      <p><i class="bi bi-geo-alt"></i> Guarapuava, PR</p>
+      <p><i class="bi bi-envelope-fill"></i> contato@livrariacentral.com</p>
+    </div>
+
+    <div class="footer-social">
+      <h5>Redes Sociais</h5>
+      <a href="#"><i class="bi bi-facebook"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>
+      <a href="#"><i class="bi bi-twitter-x"></i></a>
+    </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 Livraria Central. Todos os direitos reservados.</p>
+  </div>
+</footer>
 
 </body>
 
