--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         </a>
         <ul class="navbar-i">
           <li>
-            <a href="/Livraria/index.html">Home</a>
+            <a href="/index.html">Home</a>
           </li>
          <li>
-            <a href="/Livraria/Catalogo.html" class="btn-catlg">Catálogo</a>
+            <a href="/Catalogo.html" class="btn-catlg">Catálogo</a>
           </li>
           <li>
-            <a href="/Livraria/contato.htm" class="contato">Contato</a>
+            <a href="/contato.htm" class="contato">Contato</a>
           </li>
           <li>
-            <a href="/Livraria/login/index.htm" class="btn-entrar">Entrar</a>
+            <a href="/login/index.htm" class="btn-entrar">Entrar</a>
           </li>
           
 
