--- a/contato.html
+++ b/contato.html
@@ -24,10 +24,10 @@
             <a href="/Catalogo.html" class="btn-catlg">Catálogo</a>
           </li>
           <li>
-            <a href="/contato.htm" class="contato">Contato</a>
+            <a href="/contato.html" class="contato">Contato</a>
           </li>
           <li>
-            <a href="/login/index.htm" class="btn-entrar">Entrar</a>
+            <a href="/login/index.html" class="btn-entrar">Entrar</a>
           </li>
 
         </ul>
