--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Livraria Central</title>
+
+  <!-- Ícones e Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css" />
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -16,89 +19,83 @@
   <div class="container-fluid" id="home">
     <div class="navbar-container">
       <nav>
-        <a href="a">
+        <a href="#">
           <img src="img/Logo.png" alt="Livraria Central" class="logo">
         </a>
         <ul class="navbar-i">
-          <li>
-            <a href="/index.html">Home</a>
-          </li>
-         <li>
-            <a href="/Catalogo.html" class="btn-catlg">Catálogo</a>
-          </li>
-          <li>
-            <a href="/contato.htm" class="contato">Contato</a>
-          </li>
-          <li>
-            <a href="/login/index.htm" class="btn-entrar">Entrar</a>
-          </li>
-          
-
+          <li><a href="#home">Home</a></li>
+          <li><a href="/Catalogo.html" class="btn-catlg">Catálogo</a></li>
+          <li><a href="/contato.html" class="contato">Contato</a></li>
+          <li><a href="/login/index.html" class="btn-entrar">Entrar</a></li>
+          <li><a href="/carrinho.html"><i class="bi bi-cart"></i> Carrinho</a></li>
         </ul>
       </nav>
     </div>
+
     <main>
       <section class="home" id="home">
-         <div class="banner">
-        <h1>Livraria Central</h1>
-        <p>Explore novos mundos</p>
-      </div>
+        <div class="banner fade-in">
+          <h1>Livraria Central</h1>
+          <p>Explore novos mundos</p>
+        </div>
       </section>
-    
-      <!-- Livros -->
 
-        <section class="vnd-container">
-         <div class="Vendas">
-        <h1>Mais Vendidos</h1>
-      </div>
+      <!-- Livros -->
+      <section class="vnd-container fade-in">
+        <div class="Vendas">
+          <h1>Mais Vendidos</h1>
+        </div>
       </section>
 
       <section class="books-container">
         <ul>
-          <div class="card" style="width: 18rem;">
-            <img src="img/Harry01english.webp" class="card-img-top" alt="...">
+          <div class="card fade-in" style="width: 18rem;">
+            <img src="img/Harry01english.webp" class="card-img-top" alt="Harry Potter">
             <div class="card-body">
               <h5 class="card-title">Harry Potter e a Pedra Filosofal</h5>
               <p class="card-text">J.K. Rowling (1997).</p>
               <a href="#" class="btn btn-primary">R$ 30.00</a>
-
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/O Hobbit.jpg" class="card-img-top" alt="...">
+
+          <div class="card fade-in" style="width: 18rem;">
+            <img src="img/O Hobbit.jpg" class="card-img-top" alt="O Hobbit">
             <div class="card-body">
               <h5 class="card-title">O Hobbit</h5>
               <p class="card-text">J.R.R. Tolkien (1937).</p>
               <a href="#" class="btn btn-primary">R$ 30.00</a>
-
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/O Senhor dos Anéis A Sociedade do Anel.jpg" class="card-img-top" alt="...">
+
+          <div class="card fade-in" style="width: 18rem;">
+            <img src="img/O Senhor dos Anéis A Sociedade do Anel.jpg" class="card-img-top" alt="O Senhor dos Anéis">
             <div class="card-body">
               <h5 class="card-title">O Senhor dos Anéis: A Sociedade do Anel</h5>
               <p class="card-text">J.R.R. Tolkien (1954).</p>
               <a href="#" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/DOM CASMURRO - 1899.jpg" class="card-img-top" alt="...">
+
+          <div class="card fade-in" style="width: 18rem;">
+            <img src="img/DOM CASMURRO - 1899.jpg" class="card-img-top" alt="Dom Casmurro">
             <div class="card-body">
               <h5 class="card-title">Dom Casmurro</h5>
               <p class="card-text">Machado de Assis (1899).</p>
               <a href="#" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/O grande Gatsby.jpg" class="card-img-top" alt="...">
+
+          <div class="card fade-in" style="width: 18rem;">
+            <img src="img/O grande Gatsby.jpg" class="card-img-top" alt="O Grande Gatsby">
             <div class="card-body">
               <h5 class="card-title">O Grande Gatsby</h5>
               <p class="card-text">F. Scott Fitzgerald (1925).</p>
               <a href="#" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/1984.jpg" class="card-img-top" alt="...">
+
+          <div class="card fade-in" style="width: 18rem;">
+            <img src="img/1984.jpg" class="card-img-top" alt="1984">
             <div class="card-body">
               <h5 class="card-title">1984</h5>
               <p class="card-text">George Orwell (1949).</p>
@@ -109,28 +106,30 @@
       </section>
     </main>
   </div>
-  
-<footer class="footer">
-  <div class="footer-container">
-    <div class="footer-info">
-      <h4>Livraria Central</h4>
-      <p>Desde 2025 conectando leitores aos melhores mundos literários.</p>
-      <p><i class="bi bi-geo-alt"></i> Guarapuava, PR</p>
-      <p><i class="bi bi-envelope-fill"></i> contato@livrariacentral.com</p>
+
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-info fade-in">
+        <h4>Livraria Central</h4>
+        <p>Desde 2025 conectando leitores aos melhores mundos literários.</p>
+        <p><i class="bi bi-geo-alt"></i> Guarapuava, PR</p>
+        <p><i class="bi bi-envelope-fill"></i> contato@livrariacentral.com</p>
+      </div>
+
+      <div class="footer-social fade-in">
+        <h5>Redes Sociais</h5>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-twitter-x"></i></a>
+      </div>
     </div>
 
-    <div class="footer-social">
-      <h5>Redes Sociais</h5>
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-twitter-x"></i></a>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Livraria Central. Todos os direitos reservados.</p>
     </div>
+  </footer>
 
-  <div class="footer-bottom">
-    <p>&copy; 2025 Livraria Central. Todos os direitos reservados.</p>
-  </div>
-</footer>
-
+  <!-- Scripts -->
+  <script src="js/script.js"></script>
 </body>
-
 </html>
