--- a/contato.html
+++ b/contato.html
@@ -17,17 +17,17 @@
           <img src="img/Logo.png" alt="Livraria Central" class="logo">
         </a>
         <ul class="navbar-i">
-             <li>
+          <li>
             <a href="/index.html">Home</a>
           </li>
-         <li>
+          <li>
             <a href="/Catalogo.html" class="btn-catlg">Catálogo</a>
           </li>
           <li>
             <a href="/contato.html" class="contato">Contato</a>
           </li>
           <li>
-            <a href="/login/index.html" class="btn-entrar">Entrar</a>
+            <a href="/login/login.html" class="btn-entrar">Entrar</a>
           </li>
 
         </ul>
@@ -63,6 +63,8 @@
           alert(`Obrigado, Sua ficha foi enviada com sucesso.`);
         });
       </script>
+      <script src="/login/auth.js"></script>
+      <script>verificarLogin();</script>
 
   </div>
   </main>
