--- a/Catalogo.html
+++ b/Catalogo.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Livraria Central - Catálogo</title>
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css" />
@@ -22,7 +21,7 @@
         <li><a href="/index.html">Home</a></li>
         <li><a href="/catalogo.html" class="btn-catlg">Catálogo</a></li>
         <li><a href="/contato.html" class="contato">Contato</a></li>
-        <li><a href="/login/index.html" class="btn-entrar">Entrar</a></li>
+        <li><a href="/login/login.html" class="btn-entrar">Entrar</a></li>
         <li><a href="/carrinho.html"><i class="bi bi-cart"></i> Carrinho</a></li>
       </ul>
     </nav>
@@ -59,28 +58,30 @@
   <!-- Rodapé -->
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-info">
+      <div class="footer-info fade-in">
         <h4>Livraria Central</h4>
         <p>Desde 2025 conectando leitores aos melhores mundos literários.</p>
         <p><i class="bi bi-geo-alt"></i> Guarapuava, PR</p>
         <p><i class="bi bi-envelope-fill"></i> contato@livrariacentral.com</p>
       </div>
 
-      <div class="footer-social">
+      <div class="footer-social fade-in">
         <h5>Redes Sociais</h5>
-        <a href="#"><i class="bi bi-facebook"></i></a>
-        <a href="#"><i class="bi bi-instagram"></i></a>
-        <a href="#"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://x.com/" target="_blank"><i class="bi bi-twitter-x"></i></a>
       </div>
     </div>
 
-    <div class="footer-bottom text-center mt-3">
+    <div class="footer-bottom">
       <p>&copy; 2025 Livraria Central. Todos os direitos reservados.</p>
     </div>
   </footer>
 
   <script src="js/catalogo.js"></script>
   <script src="js/carrinho.js"></script>
+  <script src="/login/auth.js"></script>
+  <script>verificarLogin();</script>
 </body>
 
 </html>
