--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Livraria Central</title>
-
-  <!-- Ícones e Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -26,7 +22,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="/Catalogo.html" class="btn-catlg">Catálogo</a></li>
           <li><a href="/contato.html" class="contato">Contato</a></li>
-          <li><a href="/login/index.html" class="btn-entrar">Entrar</a></li>
+          <li><a href="/login/login.html" class="btn-entrar">Entrar</a></li>
           <li><a href="/carrinho.html"><i class="bi bi-cart"></i> Carrinho</a></li>
         </ul>
       </nav>
@@ -54,7 +50,7 @@
             <div class="card-body">
               <h5 class="card-title">Harry Potter e a Pedra Filosofal</h5>
               <p class="card-text">J.K. Rowling (1997).</p>
-              <a href="#" class="btn btn-primary">R$ 30.00</a>
+              <a href="/Catalogo.html" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
 
@@ -63,7 +59,7 @@
             <div class="card-body">
               <h5 class="card-title">O Hobbit</h5>
               <p class="card-text">J.R.R. Tolkien (1937).</p>
-              <a href="#" class="btn btn-primary">R$ 30.00</a>
+              <a href="/Catalogo.html" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
 
@@ -72,7 +68,7 @@
             <div class="card-body">
               <h5 class="card-title">O Senhor dos Anéis: A Sociedade do Anel</h5>
               <p class="card-text">J.R.R. Tolkien (1954).</p>
-              <a href="#" class="btn btn-primary">R$ 30.00</a>
+              <a href="/Catalogo.html" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
 
@@ -81,7 +77,7 @@
             <div class="card-body">
               <h5 class="card-title">Dom Casmurro</h5>
               <p class="card-text">Machado de Assis (1899).</p>
-              <a href="#" class="btn btn-primary">R$ 30.00</a>
+              <a href="/Catalogo.html" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
 
@@ -90,7 +86,7 @@
             <div class="card-body">
               <h5 class="card-title">O Grande Gatsby</h5>
               <p class="card-text">F. Scott Fitzgerald (1925).</p>
-              <a href="#" class="btn btn-primary">R$ 30.00</a>
+              <a href="/Catalogo.html" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
 
@@ -99,7 +95,7 @@
             <div class="card-body">
               <h5 class="card-title">1984</h5>
               <p class="card-text">George Orwell (1949).</p>
-              <a href="#" class="btn btn-primary">R$ 30.00</a>
+              <a href="/Catalogo.html" class="btn btn-primary">R$ 30.00</a>
             </div>
           </div>
         </ul>
@@ -118,9 +114,9 @@
 
       <div class="footer-social fade-in">
         <h5>Redes Sociais</h5>
-        <a href="#"><i class="bi bi-facebook"></i></a>
-        <a href="#"><i class="bi bi-instagram"></i></a>
-        <a href="#"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://x.com/" target="_blank"><i class="bi bi-twitter-x"></i></a>
       </div>
     </div>
 
@@ -131,5 +127,8 @@
 
   <!-- Scripts -->
   <script src="js/script.js"></script>
+  <script src="/login/auth.js"></script>
+  <script>verificarLogin();</script>
 </body>
+
 </html>
